      changed by the user. [rt.cpan.org 46585] (JDHEDDEN)

    VMS
    * Removed attempts to compensate for the "bin" logical added
      by some versions of GNV, Craig says they're futile.
      Put a warning into the Makefile.PL instead.
      [rt.cpan.org 46679]
    * Removed the arch_check() special case for VMS.
      [rt.cpan.org 46678]


    Tests
    * Forgot to get rid of the tests for bytes and vmsish
      which were removed in 6.51_01.
    * Stopped running a Windows specific arch_check.t test
      on non-Windows.
      [rt.cpan.org 46678]


6.52  Sat May 30 11:22:04 PDT 2009
    Docs
    * Documented CONFIGURE_REQUIRES (Alexandr Ciornii)
    * Modernized the docs for PREREQ_PM


6.51_04  Sun May 24 14:04:11 PDT 2009
    Other
    * All work on INSTALLHTML* has been reverted pending a fix for
      [rt.cpan.org 45600]


6.51_03  Sat May 23 22:38:26 PDT 2009
    Bug Fixes
    * Building *.C files was broken in 6.37. [rt.cpan.org 45557]
      Thanks to Rajesh Mandalemula for spotting it.
    New Features
    * Optional parameter CONFIGURE_REQUIRES was added, to control
      this section in META.yml (Alexandr Ciornii)


6.51_02  Mon Apr 13 21:19:56 PDT 2009
    Bug Fixes
    * Fix a minor bug with the new PERM_DIR stuff which caused EUI to think
      PERM_DIR was an install skip file.
    * A Win32 function call in the last alpha broke Win32 builds.


6.51_01  Fri Apr 10 14:30:27 PDT 2009
    New Features
    * Module installation will not be stopped by a broken Pod::Man.
      Man pages will just not be installed.
      [rt.cpan.org 43546] (Jesse Vincent)
    * vim swap files, *.swp, will now be ignored by MakeMaker.
    * Added PERM_DIR to control permissions on directories.
      [rt.cpan.org 3927] (Rajesh Mandalemula)

    Feature Changes
    * Modules in PREREQ_PM are no longer loaded in order to figure out
      their version.  parse_version() is used instead.
      [rt.cpan.org 44646]