@@ -18,6 +18,10 @@
     * Removed the arch_check() special case for VMS.
       [rt.cpan.org 46678]
 
+    Win32
+    * Restore building the core by not trying to load the Win32
+      module in arch_check() with miniperl.
+      [rt.cpan.org 46667]
 
     Tests
     * Forgot to get rid of the tests for bytes and vmsish
